[gd_scene load_steps=13 format=4 uid="uid://clktf3f0a1h8p"]

[ext_resource type="Script" uid="uid://dvnv75bqspb1l" path="res://tutorials/tutorial.gd" id="1_yb1ct"]
[ext_resource type="PackedScene" uid="uid://b6hh4rixs2dfv" path="res://player/player.tscn" id="3_ehuit"]
[ext_resource type="PackedScene" uid="uid://b38e16u4df4j2" path="res://trees/base_tree.tscn" id="4_5mrt3"]
[ext_resource type="FontFile" uid="uid://iublapr1rgpr" path="res://assets/Fonts/EightBitDragon-anqx.ttf" id="7_0cr88"]
[ext_resource type="Texture2D" uid="uid://c7bofi0b22c6u" path="res://assets/arrow.png" id="8_4t6hg"]
[ext_resource type="PackedScene" uid="uid://bwnm8og34ktju" path="res://camera/camera.tscn" id="9_dw84t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yb1ct"]
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4t6hg"]
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7vrqn"]
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ehuit"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_yb1ct")
sources/1 = SubResource("TileSetAtlasSource_4t6hg")
sources/2 = SubResource("TileSetAtlasSource_7vrqn")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cr88"]
size = Vector2(14.5, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4t6hg"]
size = Vector2(20, 108)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_yb1ct")

[node name="TutorialBackground" type="TileMapLayer" parent="."]
position = Vector2(2, 0)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAAAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAACAAAAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAAAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP//AAAAAAAAAAAOAP7/AAAAAAAAAAAOAP//AAAAAAAAAAAPAP7/AAAAAAAAAAAPAP//AAAAAAAAAAAQAP7/AAAAAAAAAAAQAP//AAAAAAAAAAARAP7/AAAAAAAAAAARAP//AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAAAAAD9/wwAAAAAAAAAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAAAAAD+/wwAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAATAP7/AAAAAAAAAAATAP//AAAAAAAAAAATAAAAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAAAAAAAAAAUAP7/AAAAAAAAAAAUAP//AAAAAAAAAAAUAAAAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAAVAP7/AAAAAAAAAAAVAP//AAAAAAAAAAAVAAAAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAAAAAAAAAWAP7/AAAAAAAAAAAWAP//AAAAAAAAAAAWAAAAAAAAAAAAAAAWAAcAAAAAAAAAAAAWAAgAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAAAAAAAAAAWAAwAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAZAAEAAgAAAAAAAAAZAAIAAgAAAAEAAAAZAAMAAgAAAAEAAAAZAAQAAgAAAAEAAAAZAAUAAgAAAAEAAAAZAAYAAgAAAAIAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAP7/AAAAAAAAAAASAP//AAAAAAAAAAASAAAAAAAAAAAAAAAXAP7/AAAAAAAAAAAXAP//AAAAAAAAAAAXAAAAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAkAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAAAAAUAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAIAP3/AAAAAAAAAAAKAP3/AAAAAAAAAAAaAAEAAgABAAAAAAAaAAIAAgABAAEAAAAaAAMAAgABAAEAAAAaAAQAAgABAAEAAAAaAAUAAgABAAEAAAAaAAYAAgABAAIAAAAbAAEAAgABAAAAAAAbAAIAAgABAAEAAAAbAAMAAgABAAEAAAAbAAQAAgABAAEAAAAbAAUAAgABAAEAAAAbAAYAAgABAAIAAAAcAAEAAgABAAAAAAAcAAIAAgABAAEAAAAcAAMAAgABAAEAAAAcAAQAAgABAAEAAAAcAAUAAgABAAEAAAAcAAYAAgABAAIAAAAdAAEAAgABAAAAAAAdAAIAAgABAAEAAAAdAAMAAgABAAEAAAAdAAQAAgABAAEAAAAdAAUAAgABAAEAAAAdAAYAAgABAAIAAAAeAAEAAgABAAAAAAAeAAIAAgABAAEAAAAeAAMAAgABAAEAAAAeAAQAAgABAAEAAAAeAAUAAgABAAEAAAAeAAYAAgABAAIAAAD2/wcAAQAAAAEAAAD2/wgAAQAAAAIAAAD2/wkAAQAAAAAAAAD2/woAAQAAAAEAAAD2/wsAAQAAAAIAAAD2/wwAAQAAAAAAAAD2/w0AAQAAAAEAAAD2/w4AAQAAAAIAAAD2/w8AAQAAAAAAAAD2/xAAAQAAAAEAAAD2/xEAAQAAAAIAAAD3/wcAAQABAAEAAAD3/wgAAQABAAIAAAD3/wkAAQABAAAAAAD3/woAAQABAAEAAAD3/wsAAQABAAIAAAD3/wwAAQABAAAAAAD3/w0AAQABAAEAAAD3/w4AAQABAAIAAAD3/w8AAQABAAAAAAD3/xAAAQABAAEAAAD3/xEAAQABAAIAAAD4/wcAAQACAAEAAAD4/wgAAQACAAIAAAD4/wkAAQACAAAAAAD4/woAAQACAAEAAAD4/wsAAQACAAIAAAD4/wwAAQACAAAAAAD4/w0AAQACAAEAAAD4/w4AAQACAAIAAAD4/w8AAQACAAAAAAD4/xAAAQACAAEAAAD4/xEAAQACAAIAAAD5/wcAAAAAAAAAAAD5/wgAAAAAAAAAAAD5/wkAAAAAAAAAAAD5/woAAAAAAAAAAAD5/wsAAAAAAAAAAAD5/wwAAAAAAAAAAAD5/w0AAAAAAAAAAAD5/w4AAAAAAAAAAAD5/w8AAQAAAAAAAAD5/xAAAQAAAAEAAAD5/xEAAQAAAAIAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/woAAAAAAAAAAAD6/wsAAAAAAAAAAAD6/wwAAAAAAAAAAAD6/w0AAAAAAAAAAAD6/w4AAAAAAAAAAAD6/w8AAQABAAAAAAD6/xAAAQABAAEAAAD6/xEAAQABAAIAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wkAAAAAAAAAAAD7/woAAAAAAAAAAAD7/wsAAAAAAAAAAAD7/wwAAAAAAAAAAAD7/w0AAAAAAAAAAAD7/w4AAAAAAAAAAAD7/w8AAQACAAAAAAD7/xAAAQACAAEAAAD7/xEAAQACAAIAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAAAAAD8/wwAAAAAAAAAAAD8/w0AAAAAAAAAAAD8/w4AAAAAAAAAAAD8/w8AAQAAAAAAAAD8/xAAAQAAAAEAAAD8/xEAAQAAAAIAAAD9/w0AAAAAAAAAAAD9/w4AAAAAAAAAAAD9/w8AAQABAAAAAAD9/xAAAQABAAEAAAD9/xEAAQABAAIAAAD+/w0AAAAAAAAAAAD+/w4AAAAAAAAAAAD+/w8AAQACAAAAAAD+/xAAAQACAAEAAAD+/xEAAQACAAIAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAQAAAAAAAAD//xAAAQAAAAEAAAD//xEAAQAAAAIAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAQABAAAAAAAAABAAAQABAAEAAAAAABEAAQABAAIAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAQACAAAAAAABABAAAQACAAEAAAABABEAAQACAAIAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAQAAAAAAAAACABAAAQAAAAEAAAACABEAAQAAAAIAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAADAA8AAQABAAAAAAADABAAAQABAAEAAAADABEAAQABAAIAAAAEAA0AAAAAAAAAAAAEAA4AAAAAAAAAAAAEAA8AAQACAAAAAAAEABAAAQACAAEAAAAEABEAAQACAAIAAAAFAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAAFAA8AAQAAAAAAAAAFABAAAQAAAAEAAAAFABEAAQAAAAIAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAAGAA8AAQABAAAAAAAGABAAAQABAAEAAAAGABEAAQABAAIAAAAHAA0AAAAAAAAAAAAHAA4AAAAAAAAAAAAHAA8AAQACAAAAAAAHABAAAQACAAEAAAAHABEAAQACAAIAAAAIAA0AAAAAAAAAAAAIAA4AAAAAAAAAAAAIAA8AAQAAAAAAAAAIABAAAQAAAAEAAAAIABEAAQAAAAIAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAQABAAAAAAAJABAAAQABAAEAAAAJABEAAQABAAIAAAAKAA0AAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAQACAAAAAAAKABAAAQACAAEAAAAKABEAAQACAAIAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAALAA8AAQAAAAAAAAALABAAAQAAAAEAAAALABEAAQAAAAIAAAAMAA0AAAAAAAAAAAAMAA4AAAAAAAAAAAAMAA8AAQABAAAAAAAMABAAAQABAAEAAAAMABEAAQABAAIAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAANAA8AAQACAAAAAAANABAAAQACAAEAAAANABEAAQACAAIAAAAOAA0AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA8AAQAAAAAAAAAOABAAAQAAAAEAAAAOABEAAQAAAAIAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAQABAAAAAAAPABAAAQABAAEAAAAPABEAAQABAAIAAAAQAA0AAAAAAAAAAAAQAA4AAAAAAAAAAAAQAA8AAQACAAAAAAAQABAAAQACAAEAAAAQABEAAQACAAIAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAQAAAAAAAAARABAAAQAAAAEAAAARABEAAQAAAAIAAAASAA0AAAAAAAAAAAASAA4AAAAAAAAAAAASAA8AAQABAAAAAAASABAAAQABAAEAAAASABEAAQABAAIAAAATAA0AAAAAAAAAAAATAA4AAAAAAAAAAAATAA8AAQACAAAAAAATABAAAQACAAEAAAATABEAAQACAAIAAAAUAA0AAAAAAAAAAAAUAA4AAAAAAAAAAAAUAA8AAQAAAAAAAAAUABAAAQAAAAEAAAAUABEAAQAAAAIAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA8AAQABAAAAAAAVABAAAQABAAEAAAAVABEAAQABAAIAAAAWAA0AAAAAAAAAAAAWAA4AAAAAAAAAAAAWAA8AAQACAAAAAAAWABAAAQACAAEAAAAWABEAAQACAAIAAAAXAA0AAAAAAAAAAAAXAA4AAAAAAAAAAAAXAA8AAQAAAAAAAAAXABAAAQAAAAEAAAAXABEAAQAAAAIAAAAYAAwAAAAAAAAAAAAYAA0AAAAAAAAAAAAYAA4AAAAAAAAAAAAYAA8AAQABAAAAAAAYABAAAQABAAEAAAAYABEAAQABAAIAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAAAAAAAAAAZAA0AAAAAAAAAAAAZAA4AAAAAAAAAAAAZAA8AAQACAAAAAAAZABAAAQACAAEAAAAZABEAAQACAAIAAAAaAAcAAAAAAAAAAAAaAAgAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAAoAAAAAAAAAAAAaAAsAAAAAAAAAAAAaAAwAAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA8AAQAAAAAAAAAaABAAAQAAAAEAAAAaABEAAQAAAAIAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAAAAAAAAAAbAAwAAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAQABAAAAAAAbABAAAQABAAEAAAAbABEAAQABAAIAAAAcAAcAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAAAAAAAAAAcAAsAAAAAAAAAAAAcAAwAAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA8AAQACAAAAAAAcABAAAQACAAEAAAAcABEAAQACAAIAAAAdAAcAAAAAAAAAAAAdAAgAAAAAAAAAAAAdAAkAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAAsAAAAAAAAAAAAdAAwAAAAAAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAQAAAAAAAAAdABAAAQAAAAEAAAAdABEAAQAAAAIAAAAeAAcAAQAAAAEAAAAeAAgAAQAAAAIAAAAeAAkAAQAAAAAAAAAeAAoAAQAAAAEAAAAeAAsAAQAAAAIAAAAeAAwAAQAAAAAAAAAeAA0AAQAAAAEAAAAeAA4AAQAAAAIAAAAeAA8AAQABAAAAAAAeABAAAQABAAEAAAAeABEAAQABAAIAAAD2//n/AQAAAAEAAAD2//r/AQAAAAIAAAD2//v/AQAAAAAAAAD2//z/AQAAAAEAAAD2//3/AQAAAAIAAAD2//7/AQAAAAEAAAD2////AQAAAAIAAAD2/wAAAQAAAAAAAAD2/wEAAQAAAAEAAAD2/wIAAQAAAAIAAAD2/wMAAQAAAAAAAAD2/wQAAQAAAAEAAAD2/wUAAQAAAAIAAAD2/wYAAQAAAAAAAAD3//n/AQABAAEAAAD3//r/AQABAAIAAAD3//v/AQABAAAAAAD3//z/AQABAAEAAAD3//3/AQABAAIAAAD3//7/AQABAAEAAAD3////AQABAAIAAAD3/wAAAQABAAAAAAD3/wEAAQABAAEAAAD3/wIAAQABAAIAAAD3/wMAAQABAAAAAAD3/wQAAQABAAEAAAD3/wUAAQABAAIAAAD3/wYAAQABAAAAAAD4//n/AQACAAEAAAD4//r/AQACAAIAAAD4//v/AQACAAAAAAD4//z/AQACAAEAAAD4//3/AQACAAIAAAD4//7/AQACAAEAAAD4////AQACAAIAAAD4/wAAAQACAAAAAAD4/wEAAQACAAEAAAD4/wIAAQACAAIAAAD4/wMAAQACAAAAAAD4/wQAAQACAAEAAAD4/wUAAQACAAIAAAD4/wYAAQACAAAAAAD5//n/AQAAAAEAAAD5//r/AQAAAAIAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD6//n/AQABAAEAAAD6//r/AQABAAIAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD7//n/AQACAAEAAAD7//r/AQACAAIAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD8//n/AQAAAAEAAAD8//r/AQAAAAIAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD9//n/AQABAAEAAAD9//r/AQABAAIAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAAAAAAAAAD+//n/AQACAAEAAAD+//r/AQACAAIAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+//3/AAAAAAAAAAD///n/AQAAAAEAAAD///r/AQAAAAIAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD///3/AAAAAAAAAAAAAPn/AQABAAEAAAAAAPr/AQABAAIAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAABAPn/AQACAAEAAAABAPr/AQACAAIAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAACAPn/AQAAAAEAAAACAPr/AQAAAAIAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAP3/AAAAAAAAAAADAPn/AQABAAEAAAADAPr/AQABAAIAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAP3/AAAAAAAAAAAEAPn/AQACAAEAAAAEAPr/AQACAAIAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAFAPn/AQAAAAEAAAAFAPr/AQAAAAIAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAGAPn/AQABAAEAAAAGAPr/AQABAAIAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAHAPn/AQACAAEAAAAHAPr/AQACAAIAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAIAPn/AQAAAAEAAAAIAPr/AQAAAAIAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAJAPn/AQABAAEAAAAJAPr/AQABAAIAAAAJAPv/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAKAPn/AQACAAEAAAAKAPr/AQACAAIAAAAKAPv/AAAAAAAAAAAKAPz/AAAAAAAAAAALAPn/AQAAAAEAAAALAPr/AQAAAAIAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAAAAAAAAAAMAPn/AQABAAEAAAAMAPr/AQABAAIAAAAMAPv/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAANAPn/AQACAAEAAAANAPr/AQACAAIAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAAOAPn/AQAAAAEAAAAOAPr/AQAAAAIAAAAOAPv/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAPAPn/AQABAAEAAAAPAPr/AQABAAIAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAAAAAAQAPn/AQACAAEAAAAQAPr/AQACAAIAAAAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAARAPn/AQAAAAEAAAARAPr/AQAAAAIAAAARAPv/AAAAAAAAAAARAPz/AAAAAAAAAAARAP3/AAAAAAAAAAASAPn/AQABAAEAAAASAPr/AQABAAIAAAASAPv/AAAAAAAAAAASAPz/AAAAAAAAAAASAP3/AAAAAAAAAAATAPn/AQACAAEAAAATAPr/AQACAAIAAAATAPv/AAAAAAAAAAATAPz/AAAAAAAAAAATAP3/AAAAAAAAAAAUAPn/AQAAAAEAAAAUAPr/AQAAAAIAAAAUAPv/AAAAAAAAAAAUAPz/AAAAAAAAAAAUAP3/AAAAAAAAAAAVAPn/AQABAAEAAAAVAPr/AQABAAIAAAAVAPv/AAAAAAAAAAAVAPz/AAAAAAAAAAAVAP3/AAAAAAAAAAAWAPn/AQACAAEAAAAWAPr/AQACAAIAAAAWAPv/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAP3/AAAAAAAAAAAXAPn/AQAAAAEAAAAXAPr/AQAAAAIAAAAXAPv/AAAAAAAAAAAXAPz/AAAAAAAAAAAXAP3/AAAAAAAAAAAYAPn/AQABAAEAAAAYAPr/AQABAAIAAAAYAPv/AAAAAAAAAAAYAPz/AAAAAAAAAAAYAP3/AAAAAAAAAAAZAPn/AQACAAEAAAAZAPr/AQACAAIAAAAZAPv/AAAAAAAAAAAZAPz/AAAAAAAAAAAZAP3/AAAAAAAAAAAaAPn/AQAAAAEAAAAaAPr/AQAAAAIAAAAaAPv/AAAAAAAAAAAaAPz/AAAAAAAAAAAaAP3/AAAAAAAAAAAbAPn/AQABAAEAAAAbAPr/AQABAAIAAAAbAPv/AAAAAAAAAAAbAPz/AAAAAAAAAAAbAP3/AAAAAAAAAAAcAPn/AQACAAEAAAAcAPr/AQACAAIAAAAcAPv/AAAAAAAAAAAcAPz/AAAAAAAAAAAcAP3/AAAAAAAAAAAdAPn/AQAAAAEAAAAdAPr/AQAAAAIAAAAdAPv/AAAAAAAAAAAdAPz/AAAAAAAAAAAdAP3/AAAAAAAAAAAeAPn/AQABAAEAAAAeAPr/AQABAAIAAAAeAPv/AQAAAAAAAAAeAPz/AQAAAAEAAAAeAP3/AQAAAAIAAAAYAP7/AAAAAAAAAAAYAP//AAAAAAAAAAAYAAAAAAAAAAAAAAAZAP7/AAAAAAAAAAAZAP//AAAAAAAAAAAZAAAAAAAAAAAAAAAaAP7/AAAAAAAAAAAaAP//AAAAAAAAAAAaAAAAAAAAAAAAAAAbAP7/AAAAAAAAAAAbAP//AAAAAAAAAAAbAAAAAAAAAAAAAAAcAP7/AAAAAAAAAAAcAP//AAAAAAAAAAAcAAAAAAAAAAAAAAAdAP7/AAAAAAAAAAAdAP//AAAAAAAAAAAdAAAAAAAAAAAAAAAeAP7/AQAAAAAAAAAeAP//AQAAAAEAAAAeAAAAAQAAAAIAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAAARAAYAAAAAAAAAAAASAAYAAAAAAAAAAAATAAYAAAAAAAAAAAAUAAYAAAAAAAAAAAAVAAYAAAAAAAAAAAAWAAYAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_ehuit")

[node name="ChopLabel" type="Label" parent="."]
offset_left = 23.0
offset_top = 133.0
offset_right = 360.0
offset_bottom = 156.0
theme_override_fonts/font = ExtResource("7_0cr88")
theme_override_font_sizes/font_size = 10
text = "Destruye los arboles malditos presionando Talar"
horizontal_alignment = 1

[node name="MovementLabel" type="Label" parent="."]
offset_left = -155.0
offset_top = -40.0
offset_right = 182.0
offset_bottom = -17.0
theme_override_fonts/font = ExtResource("7_0cr88")
theme_override_font_sizes/font_size = 10
text = "Movimiento"
horizontal_alignment = 1

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(446, 61)
scale = Vector2(0.169289, 0.107157)
texture = ExtResource("8_4t6hg")

[node name="Player" parent="." instance=ExtResource("3_ehuit")]
position = Vector2(175, -18)
scale = Vector2(0.7, 0.7)

[node name="BaseTree" parent="." instance=ExtResource("4_5mrt3")]
position = Vector2(100, 92)

[node name="BaseTree2" parent="." instance=ExtResource("4_5mrt3")]
position = Vector2(240, 93)

[node name="Camera2D" parent="." instance=ExtResource("9_dw84t")]
position = Vector2(169, 88)
max_shake = 1.0
shake_fade = 1.0

[node name="LevelArea" type="Area2D" parent="."]
position = Vector2(10, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelArea"]
position = Vector2(489, 65)
shape = SubResource("RectangleShape2D_0cr88")

[node name="Lock" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lock"]
position = Vector2(481, 60)
shape = SubResource("RectangleShape2D_4t6hg")

[connection signal="body_entered" from="LevelArea" to="." method="_on_level_area_body_entered"]
